##Text encoding: utf-8

2016-01-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/dialog.cc: don't throw an exception in Dialog::SetRealName().
	* programs/table/gchemtable-curve.cc: don't crash when showing an already
	existing chart. [Redhat bug #1302135]

2016-01-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/scheme.cc: allow missing products in reactions again.
	* plugins/loaders/cdx/cdx.cc: fix strings encoding while loading. Import
	reaction and mesomery.

2016-01-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fix scale for CDX documents.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.

2016-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed GetMedianBondLength().
	* plugins/loaders/cdx/cdx.cc: just convert distances to points.

2016-01-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed a crasher.
	* plugins/loaders/cdx/cdx.cc: enhanced style import.
	* plugins/loaders/cdxml/cdxml.cc: fixed DTD.

2016-01-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: fix position setting through GetProperty().
	* libs/gcp/fragment.cc: ditto.
	* libs/gcu/document.cc: fixed an uninitialized member condition.
	* plugins/loaders/cdxml/cdxml.cc: protect against NULL attributes.

2016-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fixed two crashers.

2015-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: add kudos as requested.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/paint/gchempaint.desktop.in.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2015-12-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: fix drawing when zoomed.
