@@ -1,5 +1,11 @@
 ##Text encoding: utf-8
 
+2016-02-04  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/reactant.cc: new method needed to import stoichiometry.
+	* libs/gcp/reactant.h: ditto.
+	* plugins/loaders/cdx/cdx.cc: detect stoichiometry coefficients in
+	reactions.
+
 2016-01-29  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcu/dialog.cc: don't throw an exception in Dialog::SetRealName().
 	* programs/table/gchemtable-curve.cc: don't crash when showing an already
